# mcp-webpage-to-s3

./: CLAUDE.md  Dockerfile  README.md  config.yaml.sample  debug_storage.py  fix_config.py  main.py  pyproject.toml
.github/workflow/: docker-ci.yaml
src/: __init__.py  config.py  libcloud_wrapper.py  s3_wrapper.py  server.py
tests/: libcloud_example.py  test_config.py  test_libcloud_wrapper.py
