[project]
name = "mcp-webpage-to-s3"
version = "0.1.3"
description = "MCP Server for deploy html content to S3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.3",
    "boto3>=1.42.30",
    "pyyaml>=6.0.3",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "nanoid>=2.0.0",
]

[project.scripts]
mcp-webpage-to-s3 = "src.server:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 150
target-version = ['py312']
